# intel-xpu-backend-for-triton

./: .claudeignore  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  1  AGENTS.md  BMG_BDPAS_INVESTIGATION_STATUS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  INTEL_XPU_IN_KERNEL_BARRIER_INVESTIGATION.md  LICENSE  LevelZeroSDK.tar  MANIFEST.in  MERGE_1819e09_NOTES.md  Makefile  PVC_SETUP_GUIDE.md  README.md  RELEASE.md  SECURITY.md  args_data.json  bandit.yaml  bench_onednn_gemm.py  bench_standalone_gemm.py  bench_triton_gemm.py  bgemm.diff  broken.spv  config  create_slides.py  dbg.txt  dbt.txt  debug_block_load.mlir  debug_block_load_after_materialize_block_pointer.mlir  debug_cmds.txt  debug_sheet.txt  demo_xetla_gemm.diff  div_new.py  (+32 more)
benchmark/: CMakeLists.txt  experimental-block-pointer.py  setup.py
benchmark/cmake/: FindXeTLALibrary.cmake
benchmark/inductor_kernels/: AlbertForMaskedLM_triton_red_fused__to_copy_add_native_layer_norm_native_layer_norm_backward_sum_19.py  AlbertForQuestionAnswering_triton_red_fused__to_copy_add_native_layer_norm_native_layer_norm_backward_sum_14.py  BERT_pytorch_triton_red_fused__to_copy_add_div_mul_sub_sum_13.py  BartForCausalLM_triton_per_fused__softmax_backward_data__to_copy_13.py  BartForConditionalGeneration_triton_per_fused__softmax_backward_data_13.py  BertForMaskedLM_triton_per_fused__softmax__to_copy_add_div_native_dropout_5.py  BertForQuestionAnswering_triton_per_fused__softmax__to_copy_add_div_native_dropout_5.py  BlenderbotForCausalLM_triton_poi_fused__to_copy_8.py  BlenderbotForConditionalGeneration_triton_red_fused__to_copy_add_native_dropout_native_layer_norm_view_10.py  BlenderbotSmallForCausalLM_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  BlenderbotSmallForConditionalGeneration_triton_red_fused__log_softmax_backward_data__to_copy_add_nll_loss_backward_nll_loss_forward_2.py  CamemBert_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  DebertaForMaskedLM_triton_red_fused__log_softmax_backward_data_add_masked_fill_nll_loss_backward_2.py  DebertaForQuestionAnswering_triton_per_fused__softmax__to_copy_bernoulli_bitwise_not_masked_fill_mul_rsub_5.py  DebertaV2ForMaskedLM_triton_red_fused__to_copy_add_bernoulli_masked_fill_mul_native_layer_norm_native_layer_norm_backward_rsub_view_13.py  DebertaV2ForQuestionAnswering_triton_red_fused__to_copy_add_bernoulli_masked_fill_mul_native_layer_norm_native_layer_norm_backward_rsub_view_12.py  DistilBertForMaskedLM_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  DistilBertForQuestionAnswering_triton_red_fused__softmax_masked_fill_native_dropout_7.py  DistillGPT2_triton_red_fused__log_softmax__to_copy_21.py  ElectraForCausalLM_triton_poi_fused_add_slice_backward_3.py  ElectraForQuestionAnswering_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  GPTJForCausalLM_triton_poi_fused__to_copy_10.py  GPTNeoForCausalLM_triton_poi_fused__to_copy_add_mul_pow_tanh_backward_11.py  GPTNeoForSequenceClassification_triton_poi_fused__to_copy_add_mul_pow_tanh_backward_6.py  GoogleFnet_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  LayoutLMForSequenceClassification_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  M2M100ForConditionalGeneration_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  MBartForCausalLM_triton_per_fused__softmax_backward_data__to_copy_10.py  MBartForConditionalGeneration_triton_per_fused__softmax__to_copy_clone_5.py  MT5ForConditionalGeneration_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  MegatronBertForCausalLM_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  MegatronBertForQuestionAnswering_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  MobileBertForMaskedLM_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_4.py  MobileBertForQuestionAnswering_triton_poi_fused_relu_threshold_backward_33.py  OPTForCausalLM_triton_red_fused__softmax_backward_data__to_copy_add_div_eq_lift_fresh_lt_masked_fill_where_14.py  PLBartForCausalLM_triton_per_fused__softmax__to_copy_native_dropout_5.py  PLBartForConditionalGeneration_triton_red_fused__log_softmax_backward_data__to_copy_add_nll_loss_backward_nll_loss_forward_2.py  PegasusForCausalLM_triton_red_fused__log_softmax_backward_data_add_nll_loss_backward_nll_loss_forward_2.py  PegasusForConditionalGeneration_triton_red_fused__log_softmax_backward_data__to_copy_add_nll_loss_backward_nll_loss_forward_2.py  RobertaForQuestionAnswering_triton_per_fused__softmax__to_copy_add_div_native_dropout_6.py  (+87 more)
benchmark/scripts/: README.md  kernel_collection.py  micro_kernel_extractor.py  perf_data_cuda.txt  perf_data_summarize.py  perf_data_xpu.txt  run_inductor_kernel_bench.py  table_tool.py
benchmark/triton_intel_benchmark/: __init__.py  experimental-block-pointer.py
benchmark/xetla_kernel/: CMakeLists.txt  python_main.cpp
benchmarks/: CMakeLists.txt  gpu_info.json  setup.py  transform_results.py  triton_benchmarks_validate.py
benchmarks/cmake/: FindCUTLASSLibrary.cmake  FindONEDNNLibrary.cmake  FindSyclTlaLibrary.cmake  FindXeTLALibrary.cmake  FindoneDNNLibrary.cmake
benchmarks/cutlass_kernel/: CMakeLists.txt  config-tool.py  cutlass-library.conf  python_main.cpp
benchmarks/flex_attention-pr-check/: .gitignore  README.md  collect_tests.py  compare_cuda_xpu.py  new-run-entire.sh  new-run.sh  process-ut.py  prompt.json  prompt.md  run_llm_inductor_greedy.py  run_tests_sequentially.sh  transform_results.py  triton-llama3-profiling.sh
benchmarks/key_benchmarks/: flash_attention_fwd_benchmark.py  fused_softmax.py  gemm_splitk_benchmark.py  gemm_streamk_benchmark.py
benchmarks/micro_benchmarks/: run_benchmarks.py
benchmarks/onednn_kernel/: CMakeLists.txt  (+2 more)
python/: CMakeLists.txt  __init__.py  build_helpers.py  extensions.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
(+2297 files in other folders)
