[project]
name = "benchmark_monitor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas", "pyyaml"]

[project.scripts]
benchmark-monitor = "benchmark_monitor.entry_point:main"

[tool.setuptools]
packages = ["benchmark_monitor"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
